==> Joe-Caipangcheng/N32WB03x-DK/5-Software Development Kit/N32WB03x_MESH V1.0.0/bsp/bsp_led.c <==
/*****************************************************************************
 * Copyright (c) 2019, Nations Technologies Inc.
 *
 * All rights reserved.
 * ****************************************************************************
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice,
 * this list of conditions and the disclaimer below.
 *
 * Nations' name may not be used to endorse or promote products derived from
 * this software without specific prior written permission.
 *
 * DISCLAIMER: THIS SOFTWARE IS PROVIDED BY NATIONS "AS IS" AND ANY EXPRESS OR
 * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT ARE
 * DISCLAIMED. IN NO EVENT SHALL NATIONS BE LIABLE FOR ANY DIRECT, INDIRECT,
 * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA,
 * OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 * ****************************************************************************/

/**
 * @file bsp_led.c
 * @author Nations Firmware Team
 * @version v1.0.0
 *
 * @copyright Copyright (c) 2019, Nations Technologies Inc. All rights reserved.
 */

/** @addtogroup 
 * @{
 */

 /* Includes ------------------------------------------------------------------*/
#include "bsp_led.h"


/**
 * @brief Development board led init.
 * @param[in] none.
 * @return none.
 */
void bsp_leds_config(void)
{
    GPIO_InitType GPIO_InitStructure;
    if(LED1_GPIO_PORT == GPIOA || LED2_GPIO_PORT == GPIOA) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);
    if(LED1_GPIO_PORT == GPIOB || LED2_GPIO_PORT == GPIOB) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOB, ENABLE);
    
    GPIO_InitStructure.Pin = LED_GPIO1_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.GPIO_Pull = GPIO_NO_PULL;
    GPIO_InitPeripheral(LED1_GPIO_PORT, &GPIO_InitStructure);
    GPIO_InitStructure.Pin = LED_GPIO2_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.GPIO_Pull = GPIO_NO_PULL;    
    GPIO_InitPeripheral(LED2_GPIO_PORT, &GPIO_InitStructure);
    
    GPIO_ResetBits(LED1_GPIO_PORT, LED_GPIO1_PIN);
    GPIO_ResetBits(LED2_GPIO_PORT, LED_GPIO2_PIN);
    
}
/**
 * @brief Development board led turn on.
 * @param[in] led_port led port num.
 * @param[in] led_pin led pin num.
 * @return none.
 */
void bsp_led_on(GPIO_Module* led_port, uint32_t led_pin)
{
    if(LED1_GPIO_PORT == GPIOA || LED2_GPIO_PORT == GPIOA) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);
    if(LED1_GPIO_PORT == GPIOB || LED2_GPIO_PORT == GPIOB) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOB, ENABLE);
    GPIO_SetBits(led_port, led_pin);
}
/**
 * @brief Development board led turn off.
 * @param[in] led_port led port num.
 * @param[in] led_pin led pin num.
 * @return none.
 */
void bsp_led_off(GPIO_Module* led_port, uint32_t led_pin)
{
    if(led_port == GPIOA) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);
    if(led_port == GPIOB) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOB, ENABLE);
    GPIO_ResetBits(led_port, led_pin);
}
/**
 * @brief Development board led toggle.
 * @param[in] led_port led port num.
 * @param[in] led_pin led pin num.
 * @return none.
 */
void bsp_led_toggle(GPIO_Module* led_port, uint32_t led_pin)
{
    if(led_port == GPIOA) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA, ENABLE);
    if(led_port == GPIOB) 
        RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOB, ENABLE);
    GPIO_TogglePin(led_port, led_pin);
}

/**
 * @brief Development board led gpio read.
 * @param[in] led_port led port num.
 * @param[in] led_pin led pin num.
 * @return GPIO state.
 */
bool bsp_led_read(GPIO_Module* led_port, uint32_t led_pin)
{
    return GPIO_ReadOutputDataBit(led_port, led_pin);
}
